--- a/backend-spp/package.json
+++ b/backend-spp/package.json
@@ -17,5 +17,8 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.7",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "postcss-cli": "^10.1.0"
     }
 }
